# bank-service

./: README.md  docker-compose.yml  kafka_consumer.py
account-project/: Dockerfile  pom.xml
account-project/account-datalayer/: pom.xml
account-project/account-datalayer/src/main/java/se/liu/ida/tdp024/account/data/api/entity/: Account.java  Transaction.java
account-project/account-datalayer/src/main/java/se/liu/ida/tdp024/account/data/api/exceptions/: EntityNotFoundException.java  InputParameterException.java  ServiceConfigurationException.java
account-project/account-logic/: pom.xml
account-project/account-logic/src/main/java/se/liu/ida/tdp024/account/logic/interfaces/: Bank.java  Person.java
account-project/account-logic/src/main/java/se/liu/ida/tdp024/account/logic/utils/: KafkaLogger.java
account-project/account-rest/: pom.xml
account-project/account-rest/src/main/java/hello/: AccountController.java  AccountErrorController.java  Config.java  RequestLogger.java
account-project/account-rest/src/main/java/hello/interfaces/: CreateAccount.java
account-project/account-rest/src/main/java/hello/utils/: KafkaLogger.java
account-project/account-rest/src/test/java/hello/: AccountControllerTest.java
bank-api/: .env  .gitignore  Cargo.toml  Dockerfile  README.md  diesel.toml  entrypoint.sh
bank-api/migrations/2024-09-20-155541_banks/: down.sql  up.sql
bank-api/src/: kafka.rs  logic.rs  main.rs  models.rs  schema.rs
person-api/: .htaccess  Dockerfile  server.php
person-api/data/: person.json
(+20 files in other folders)
