[package]
name = "bank-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"  # Web framework
serde = { version = "1.0", features = ["derive"] }  # Serialization library
serde_json = "1.0"  # For handling JSON
dotenv = "0.15"  # Environment variables
env_logger = "0.10"
diesel = { version = "2.0", features = ["postgres"] }
rdkafka = { version = "0.36.2", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "bank-api"  # Add this section to specify the binary
path = "src/main.rs"  # Path to your main file